# randrange

./: .gitignore  AGENTS.md  README.md  api-restart.sh  api-test.sh  delete.sh  demo-mcp-realm.json  deploy.sh  docker-compose.override.yml  docker-compose.yml  fake-db.sh  keycloak-restart.sh  prefect-openapi-schema.json  prefect_models.py  prefect_schema.sql  prefect_schema.txt  prefect_schemas.py  pyproject.toml  requirements.txt  scripts.sh  start.sh  work-pool.sh
.amazonq/rules/: general.md
arch-auth/: .dockerignore  Dockerfile  Dockerfile-dev  pyproject.toml  requirements-testing-updated.txt  requirements-testing.txt  requirements.txt
arch-auth/api/: db.py  email_client.py  logs.py  main.py  on_startup.py  settings.py
arch-auth/api/auth/: __init__.py  bootstrap.py  deps.py  prefect_client.py  service.py
arch-auth/api/models/: __init__.py  base.py  mixins.py
arch-auth/api/models/auth/: models.py  schemas.py
arch-auth/api/models/metadata/: metadata.py
arch-auth/api/routers/: auth_routes.py  metadata_routes.py  prefect_gateway_routes.py
arch-auth/tests/: conftest.py  db.yaml  test_auth_suite.py  test_group_admin_reflection.py  test_group_admin_scope_enforcement.py  test_permission_matrix_endpoint.py  test_principal_group_admin_resolution.py  test_update_group_member.py  users.db
frontend-react/: .dockerignore  Dockerfile  Dockerfile-dev  README.md  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend-react/src/: App.tsx  env.ts  main.tsx
frontend-react/tests/: AuthContext.test.jsx  BaseDialog.test.jsx  DeploymentActionsMenu.test.jsx  DeploymentFiltersCard.test.jsx  DeploymentFteDialog.test.jsx  DeploymentLogsPanel.test.jsx  DeploymentMetaChips.test.jsx  DeploymentParamsForm.test.jsx  DeploymentRunDialog.test.jsx  DeploymentSummaryCard.test.jsx  ErrorBoundary.test.jsx  ErrorMsg.test.jsx  FlowRunActionsMenu.test.jsx  FlowRunSummaryCard.test.jsx  GroupTable.test.jsx  LoadingMsg.test.jsx  Navbar.test.jsx  PaginationControl.test.jsx  ProgressCircle.test.jsx  ProtectedRoute.test.jsx  RequireAuth.test.jsx  SchedulingHeatmap.test.jsx  SearchInput.test.jsx  SelectForm.test.jsx  SnackbarContext.test.jsx  Toast.test.jsx  adminClient.test.jsx  authClient.test.jsx  metadataClient.test.jsx  prefectGatewayClient.test.jsx  setup.ts  useAdminDirectory.test.jsx
pgadmin/: pgpass
postgres/init/: 001-create-arch-auth-db.sql  002-create-auth-schema.sql  003-create-metadata-db.sql  004-create-metadata-schema.sql  005-create-deployment-fte-snapshot.sql  (+1 more)
prefect_deployment/: fte_flows.py  main.py  settings.py
streamlit-client/: app.py
(+108 files in other folders)
